--- a/index.html
+++ b/index.html
@@ -1279,6 +1279,17 @@
           </div>
           <br />
 
+          <!-- leave column blank -->
+        <div style="display:none;">
+          <label for="blank_column_end">NONE</label>
+          <textarea
+            id="blank_column_end"
+            name="blank_column_end"
+            rows="4"
+            cols="50"
+          ></textarea>
+        </div>
+          
           <!-- Textarea for General Comments -->
           <label for="general_comments">General Comments:</label>
           <textarea
@@ -1289,15 +1300,6 @@
           ></textarea>
         </fieldset>
 
-        <div style="display:none;">
-          <label for="blank_column_end">NONE</label>
-          <textarea
-            id="blank_column_end"
-            name="blank_column_end"
-            rows="4"
-            cols="50"
-          ></textarea>
-        </div>
         </fieldset>
 
         <!-- Submit Button -->
