--- a/index.html
+++ b/index.html
@@ -1280,15 +1280,14 @@
           <br />
 
           <!-- leave column blank -->
-        <div style="display:none;">
-          <label for="blank_column_end">NONE</label>
+          <label for="blank_column_end" style="display:none;">NONE</label>
           <textarea
             id="blank_column_end"
             name="blank_column_end"
             rows="4"
             cols="50"
+            style="display:none;"
           ></textarea>
-        </div>
           
           <!-- Textarea for General Comments -->
           <label for="general_comments">General Comments:</label>
