--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="container">
       <h1>Documenting Global Ethnic Disparities: Codebook Entry Generator</h1>
       <form id="dataForm">
+        <button type="button" onclick="resetForm()">Reset</button>
         <!-- admin -->
         <!-- <fieldset style="display: none">
              <legend>Basic</legend>
@@ -1355,6 +1356,15 @@
           console.error('Failed to copy text: ', err);
         });
       }
+
+      function resetForm() {
+        // Reset the form fields
+        document.getElementById("dataForm").reset();
+
+        // Clear the TSV output textarea
+        document.getElementById("tsvOutput").value = "";
+      }
+
     </script>
   </body>
 </html>
