--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <div class="container">
       <h1>Documenting Global Ethnic Disparities: Codebook Entry Generator</h1>
       <form id="dataForm">
-        <button type="button" onclick="resetForm()">Reset</button>
         <!-- admin -->
         <!-- <fieldset style="display: none">
              <legend>Basic</legend>
@@ -1328,6 +1327,7 @@
       <textarea id="tsvOutput" rows="10" cols="80" readonly></textarea>
       <button type="button" onclick="copyToClipboard()">Copy to Clipboard</button>
 
+        <button type="button" onclick="resetForm()">Reset All</button>
     </div>
 
 
