--- a/index.html
+++ b/index.html
@@ -1327,7 +1327,7 @@
       <textarea id="tsvOutput" rows="10" cols="80" readonly></textarea>
       <button type="button" onclick="copyToClipboard()">Copy to Clipboard</button>
 
-        <button type="button" onclick="resetForm()">Reset All</button>
+        <button type="button" style="background-color:red;" onclick="resetForm()">Reset All</button>
     </div>
 
 
